# claude-stuff

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json
plugins/openrouter-image-gen/: generate-image.py
plugins/openrouter-image-gen/.claude-plugin/: plugin.json
plugins/openrouter-image-gen/commands/: generate-image.md
plugins/openrouter-image-gen/skills/generate-image/: SKILL.md
