[project]
name = "typedrat-claude-plugins"
version = "0.1.0"
description = "Claude Code plugin marketplace by typedrat"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "rich",
]

[project.urls]
Repository = "https://github.com/typedrat/claude-stuff"
